--- a/src/App.css
+++ b/src/App.css
@@ -8,7 +8,8 @@
   background-size: cover;
   background-position: center;
   background-position-y: -160px;
-  margin: 0px
+  margin: 0px;
+  color: #603022
 }
 
 footer {
